--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
+    <!--Font stylesheet-->
+    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css">
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100 homeBG">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -60,8 +62,12 @@
 </nav>
 
     <main class="flex-shrink-0">
-       
+       <div class="container text-center mt-5">
+            <h1 class="display-1 homeText">Bootstrap And The Grids</h1>
+            <h3 class="text-white">An Exercise in Bootstrap Grid Layouts</h3>
+       </div>
     </main>
+
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids By Brittany Pitre</span>
