--- a/grid1.html
+++ b/grid1.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bootstrap Grids</a>
+        <a class="navbar-brand" href="index.html">Bootstrap Grids</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,8 +60,23 @@
 </nav>
 
     <main class="flex-shrink-0">
-       
+       <div class="container h-100 minHeight">
+           <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
+               <div class="col">
+                   <div class="bg-dark text-light h-100 p-2">
+                        <h1>COL ONE</h1>
+                        <p>Lorem ipsum dolor sit amet. Id iure unde ut quidem internosaut incidunt. Est laborum saepe et quae ratione ab aliquid! Qui similique animi hic rerum consectetur aut rerum veritatis. </p><p>Et enim impedit eos unde velit <strong>Sed maiores</strong>? Est voluptatibus assumenda a similique eius quo expedita assumenda 33 beatae nisi ea magnam laudantium quo maiores officiis? Aut dolores dolores est nisi animi <em>Sit voluptatem eos eaque voluptate et quibusdam numquam et neque doloribus</em>. </p><p>Aut harum deserunt qui consequatur officia qui quia optio quo excepturi suscipit  inventore galisum? Assumenda cupiditate est voluptas repellat hic omnis tenetur ut quibusdam galisum quo quae corporis. Vel beatae error <em>Qui harum ut deserunt error cum commodi architecto</em> qui eius sunt non fugit sapiente. </p>
+                   </div>
+               </div>
+               <div class="col">
+                   <div class="bg-secondary text-light h-100 p-2">
+                        <h1>COL TWO</h1>
+                   </div>
+               </div>
+           </div>
+       </div>
     </main>
+
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids By Brittany Pitre</span>
