--- a/grid2.html
+++ b/grid2.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bootstrap Grids</a>
+        <a class="navbar-brand" href="index.html">Bootstrap Grids</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,8 +60,22 @@
 </nav>
 
     <main class="flex-shrink-0">
-       
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
+               <div class="col-3">
+                   <div class="bg-dark text-light h-100 p-2">
+                        <h5>Side Nav</h5>
+                   </div>
+               </div>
+               <div class="col-9">
+                <div class="bg-secondary text-light h-100 p-2">
+                    <h5>Main Content</h5>
+                </div>
+            </div>
+           </div>
+       </div>
     </main>
+
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids By Brittany Pitre</span>
