--- a/grid3.html
+++ b/grid3.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bootstrap Grids</a>
+        <a class="navbar-brand" href="index.html">Bootstrap Grids</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,8 +60,37 @@
 </nav>
 
     <main class="flex-shrink-0">
-       
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
+               <!--LEFT COLUMN-->
+               <div class="col-7">
+                   <div class="bg-secondary text-light p-2 h-100">
+                        <h1>Article Title</h1>
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                    </div>
+               </div>
+               <!--RIGHT COLUMN-->
+               <div class="col-5 d-flex flex-column justify-content-evenly">
+                   <!--RIGHT TOP COLUMN-->
+                    <div class="bg-dark text-light h-50 p-2 overflow-auto">
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                        </div>
+                    <!--RIGHT BOTTOM COLUMN-->
+                    <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                    </div>
+                    <div class="bg-dark text-light border border-top p-2">
+                        <button class="btn btn-light" type="button">Read More</button>
+                    </div>
+                </div>
+           </div>
+       </div>
     </main>
+
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
             <span class="text-white">Bootstrap And The Grids By Brittany Pitre</span>
