--- a/grid3b.html
+++ b/grid3b.html
@@ -61,14 +61,14 @@
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
-            <ul class="nav nav-pills mb-1">
+           <ul class="nav nav-pills mb-1">
                 <li class="nav-item">
-                    <a href="grid3.html" class="nav-link active" aria-current="page">Grid 3</a>
+                    <a href="grid3.html" class="nav-link">Grid 3</a>
                 </li>
                 <li class="nav-item">
-                    <a href="grid3b.html" class="nav-link">Grid 3B</a>
+                    <a href="grid3b.html" class="nav-link active" aria-current="page">Grid 3B</a>
                 </li>
-            </ul>
+           </ul>
            <div class="row h-100">
                <!--LEFT COLUMN-->
                <div class="col-7">
@@ -80,19 +80,28 @@
                     </div>
                </div>
                <!--RIGHT COLUMN-->
-               <div class="col-5 d-flex flex-column justify-content-evenly">
+               <div class="col-5">
                    <!--RIGHT TOP COLUMN-->
-                    <div class="bg-dark text-light h-50 p-2 overflow-auto">
-                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
-                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
-                        </div>
-                    <!--RIGHT BOTTOM COLUMN-->
-                    <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
-                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
-                        <p>Lorem ipsum dolor sit amet. 33 suscipit sunt cum minima iure ut repudiandae porro et animi nulla. Qui molestiae velit sed quia totam eos assumenda iure nam perspiciatis nostrum aut necessitatibus consequatur. Aut dolor minima in obcaecati iure non vero porro ea doloremque consequatur ab ullam aspernatur. </p>
+                    <div class="bg-secondary text-light p-2">
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="search" aria-label="search">
+                            <button class="btn btn-outline-light" type="submit">Search</button>
+                        </form>
                     </div>
-                    <div class="bg-dark text-light border border-top p-2">
-                        <button class="btn btn-light" type="button">Read More</button>
+                    <!--RIGHT BOTTOM COLUMN-->
+                    <div class="bg-dark text-light mt-2 p-2">
+                        <h5>More Articles</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Article One</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Article Two</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Article Three</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
            </div>
