--- a/grid9.html
+++ b/grid9.html
@@ -60,24 +60,29 @@
 </nav>
 
     <main class="flex-shrink-0">
-        <div class="container-fluid h-100 minHeight">
+        <div class="container-lg h-100 minHeight">
             <div class="row row-cols-1 gy-4 h-100">
-                <div class="col-md-12">
+                <div class="col col-md-12">
                     <div class="bg-secondary text-light h-100 p-2">
                          COLUMN ONE
                     </div>
                 </div>
-                <div class="col-md-4 order-last">
+                <div class="col-6 col-md-3 order-last">
                  <div class="bg-dark text-light h-100 p-2">
                      COLUMN TWO BUT LAST
                  </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-6 col-md-3">
                     <div class="bg-secondary text-light h-100 p-2">
                         COLUMN THREE
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-6 col-md-3">
+                    <div class="bg-secondary text-light h-100 p-2">
+                        COLUMN THREE
+                    </div>
+                </div>
+                <div class="col-6 col-md-3">
                     <div class="bg-secondary text-light h-100 p-2">
                         COLUMN THREE
                     </div>
